--- a/custom_components/ha_dashboard/manifest.json
+++ b/custom_components/ha_dashboard/manifest.json
@@ -6,5 +6,11 @@
   "requirements": [],
   "dependencies": [],
   "codeowners": ["@JiaJunLee"],
-  "iot_class": "local_push"
+  "iot_class": "local_push",
+  "resources": [
+    {
+      "type": "js",
+      "url": "/custom_components/ha_dashboard/www/js/index.js"
+    }
+  ]
 }
