--- a/custom_components/ha_dashboard/package.json
+++ b/custom_components/ha_dashboard/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.2",
+    "@vitejs/plugin-vue-jsx": "^5.1.4",
+    "@vue/web-component-wrapper": "^1.3.0",
     "vite": "^7.3.1"
   }
 }
