--- a/custom_components/ha_dashboard/package.json
+++ b/custom_components/ha_dashboard/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.13.2",
     "vue": "^3.5.25"
   },
   "devDependencies": {
